	  source\geomgraph\EdgeList.cpp,
	  source\geomgraph\Edge.cpp,
	  source\headers\geos\geom\CoordinateFilter.h,
	  source\headers\geos\index\chain\MonotoneChainOverlapAction.h,
	  source\headers\geos\index\bintree\Root.h,
	  source\headers\geos\geomgraph\Edge.h,
	  source\headers\geos\geomgraph\Node.h: cleaned signed/unsigned types
	  mixtures, got rid from annoying compiler warnings.

2007-06-01 Mateusz Loskot <mateusz@loskot.net>

	* build/msvc80/geos_lib/geos_lib.vcproj: Applied patch with pre-build
	  events generating platform.h and version.h headers.
	  Thanks to Konstantin Baumann for this patch.
	* build/bjam: Added *experimental* support of bjam and
	  Boost.Build for GEOS.

2007-05-06 Mateusz Loskot <mateusz@loskot.net>

	* source/headers/geos/version.h.vc: Added version header
	  dedicated to use with Microsoft Visual C++ compiler.
	  The version.h.vc requires manual update when version number
	  changes.

2007-04-22 Mateusz Loskot <mateusz@loskot.net>

	* source/geom/CoordinateArraySequence.cpp: Added assertion checking
	  if passed ordinate index is valid.
	* tests/unit/capi/GEOSCoordSeqTest.cpp: Extended tests with swapped and
	  not swapped calls of setX/setY/setZ and setOrdinate functions

2007-04-15 Mateusz Loskot <mateusz@loskot.net>

	* autogen.sh: Added detection of glibtoolize as libtool utility name
	  under Mac OS X system.

2007-03-05 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/Makefile.am: enable
	  run of new testcases.

2007-03-05 Carl Anderson <carl.anderson@vadose.org>

	* tests/xmltester/: hole_from_shell.xml, hole_red.xml:
	  New testcases for buffer(0).

2007-02-26 Tom Elwertowski

	* source/inlines.cpp: fix for MingW32 builds.

2007-02-06 Carl Anderson <carl.anderson@vadose.org>

	* source/operation/buffer/SubgraphDepthLocater.cpp
	  (findStabbedSegments):
	  Implement short-circuit to avoid inner defective
	  logic.

2007-02-06 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: Makefile.am, badguy3.xml: